--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "fcdjango_env\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\user\\Anaconda3\\python.exe"
 }
